--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         />
         <link rel="stylesheet" href="./jf-openhuninn-2.0/openhuninn.css" />
         <style>
-            .wf-active body {
+            body {
                 /* font-family: "Source Code Pro", "Sono", sans-serif; */
                 font-family: "jf-openhuninn-2.0";
             }
