--- a/index.html
+++ b/index.html
@@ -1,32 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <link rel="icon" href="/cloud-network.gif" type="image/x-icon" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <!-- 清除緩存(再次訪問要重新下載) -->
-        <meta http-equiv="cache-control" content="no-cache" />
-        <!-- 設定進入頁面時的特殊效果:duration以秒爲單位,transition是過渡方式,5是由上往下 -->
-        <meta
-            http-equiv="Page-Enter"
-            contect="revealTrans(duration=1.0,transtion=5)"
-        />
-        <meta
-            http-equiv="description"
-            content="This is LiangJin Personal Website"
-        />
-        <meta
-            property="og:image"
-            content="./liangjin-license_photo-removebg-preview.png"
-        />
-        <meta property="og:title" content="LiangJin Personal Website" />
-        <meta property="og:description" content="我叫陳亮憬,來自馬來西亞。" />
-        <title>Liang Jin's Website</title>
-    </head>
 
-    <body>
-        <div id="app"></div>
-        <script type="module" src="/src/main.js"></script>
-    </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Welcome to Vuetify 3</title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
