--- a/index.html
+++ b/index.html
@@ -1,16 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" href="/website-icon.jpg" type="image/x-icon" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="cache-control" content="no-cache" />
+        <meta name="description" content="This is LiangJin Personal Website" />
+        <meta property="og:image" content="/liangjin-removebg.png" />
+        <meta property="og:title" content="LiangJin Personal Website" />
+        <meta property="og:description" content="我叫陳亮憬,來自馬來西亞。" />
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" href="/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Welcome to Vuetify 3</title>
-</head>
+        <title>Liang Jin's Website</title>
 
-<body>
-  <div id="app"></div>
-  <script type="module" src="/src/main.js"></script>
-</body>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet" />
 
+        <script>
+            document.addEventListener('contextmenu', function (event) {
+                event.preventDefault()
+            })
+        </script>
+        <style>
+            /* Hide scrollbar for Chrome, Safari and Opera */
+            ::-webkit-scrollbar {
+                display: none;
+            }
+
+            /* Hide scrollbar for IE, Edge, and Firefox */
+            body {
+                -ms-overflow-style: none; /* IE and Edge */
+                scrollbar-width: none; /* Firefox */
+            }
+
+            .JetBrains * {
+                font-family: 'JetBrains Mono', 'Source Code Pro', monospace !important;
+            }
+        </style>
+    </head>
+    <body>
+        <div id="app" class="JetBrains"></div>
+        <script type="module" src="/src/main.js"></script>
+
+        <noscript>
+            <h1 style="margin: auto; text-align: center">您的瀏覽器不支持JavaScript，請啓用後再刷新頁面。</h1>
+        </noscript>
+    </body>
 </html>
